WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280787
rememberthemilk.com: REGRESSION (
280692@main
): Clicking on the dropdown list doesn't expand to display its content
https://bugs.webkit.org/show_bug.cgi?id=280787
Summary
rememberthemilk.com: REGRESSION (280692@main): Clicking on the dropdown list ...
Antti Koivisto
Reported
2024-10-02 15:22:29 PDT
Style invalidation bug with attribute selector [style*="display: none;"]
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2024-10-02 15:25:20 PDT
rdar://136259655
Antti Koivisto
Comment 2
2024-10-02 15:30:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34597
EWS
Comment 3
2024-10-02 16:22:33 PDT
Committed
284588@main
(e4b32fa1e5ad): <
https://commits.webkit.org/284588@main
> Reviewed commits have been landed. Closing PR #34597 and removing active labels.
EWS
Comment 4
2024-10-04 15:34:27 PDT
Committed
283286.207@safari-7620-branch
(45cb97236ba4): <
https://commits.webkit.org/283286.207@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1970 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug