Cherry-pick 284588@main (e4b32fa1e5ad). https://bugs.webkit.org/show_bug.cgi?id=280787

rememberthemilk.com: REGRESSION (280692@main): Clicking on the dropdown list doesn't expand to display its content
    https://bugs.webkit.org/show_bug.cgi?id=280787
    rdar://136259655

    Reviewed by Alan Baradlay.

    The page uses attribute selectors that query the value of the style attribute

    [style*="display: none;"].b-FS-n { display: block; … }

    With the optimization implemented in 280692@main we fail to invalidate correctly when the
    inline style is programmatically mutated, affecting the value of the style attribute.

    * LayoutTests/fast/css/attribute-selector-for-style-inline-invalidation-expected.html: Added.
    * LayoutTests/fast/css/attribute-selector-for-style-inline-invalidation.html: Added.
    * Source/WebCore/dom/StyledElement.cpp:
    (WebCore::StyledElement::dirtyStyleAttribute):
    (WebCore::StyledElement::invalidateStyleAttribute):

    Uses normal element invalidation instead of optimized inline style one if we have any selectors targeting style attribute.

    * Source/WebCore/style/StyleScopeRuleSets.cpp:
    (WebCore::Style::ScopeRuleSets::collectFeatures const):
    (WebCore::Style::ScopeRuleSets::selectorsForStyleAttribute const):

    Unify the collection of style attribute selector data.

    (WebCore::Style::ScopeRuleSets::hasSelectorsForStyleAttribute const): Deleted.
    (WebCore::Style::ScopeRuleSets::hasComplexSelectorsForStyleAttribute const): Deleted.
    * Source/WebCore/style/StyleScopeRuleSets.h:

    Canonical link: https://commits.webkit.org/284588@main

Canonical link: https://commits.webkit.org/282416.182@webkitglib/2.46